added https request to finnhub

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_baud = 115200
+upload_speed = 921600 
 lib_deps = 
 	adafruit/Adafruit SSD1306@^2.4.3
 	adafruit/Adafruit BusIO@^1.7.2
