--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,11 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-monitor_baud = 115200
-upload_speed = 921600 
+upload_speed = 921600
 lib_deps = 
 	adafruit/Adafruit SSD1306@^2.4.3
 	adafruit/Adafruit BusIO@^1.7.2
 	bblanchon/ArduinoJson@^6.17.2
 	khoih-prog/ESP_WiFiManager@^1.3.0
+	sstaub/Ticker@^4.1.0
+monitor_speed = 115200
